syntax = "proto3";
package dymensionxyz.dymension.rollapp;

option go_package = "github.com/dymensionxyz/dymension/x/rollapp/types";
import "rollapp/state_info.proto"; 

message RollappStateInfo {
  string rollappId = 1; 
  StateInfo sateInfo = 2; 
  uint64 stateIndex = 3; 
  
}

